--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-oauth2": "^1.3.0",
+    "querystring": "^0.2.0",
     "request": "^2.79.0"
   },
   "devDependencies": {
